RESOLVED FIXED45011
[EFL] Regression (66531) Build break with Glib Support
https://bugs.webkit.org/show_bug.cgi?id=45011
Summary [EFL] Regression (66531) Build break with Glib Support
Ryuan Choi
Reported 2010-08-31 17:52:50 PDT
r65531 isolate glib/gtk related typedef into one file. It looks good but EFL need some of typedef because of glib support
Attachments
Patch (6.18 KB, patch)
2010-08-31 19:49 PDT, Ryuan Choi
no flags
Patch (6.13 KB, patch)
2010-08-31 20:19 PDT, Ryuan Choi
no flags
Patch (5.93 KB, patch)
2010-09-03 07:51 PDT, Lucas De Marchi
no flags
Patch (5.96 KB, patch)
2010-09-03 09:24 PDT, Lucas De Marchi
no flags
Ryuan Choi
Comment 1 2010-08-31 19:49:11 PDT
WebKit Review Bot
Comment 2 2010-08-31 19:52:28 PDT
Attachment 66161 [details] did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style']" exit_code: 1 JavaScriptCore/wtf/efl/EflTypedefs.h:40: cairo_surface_t is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Total errors found: 1 in 9 files If any of these errors are false positives, please file a bug against check-webkit-style.
Ryuan Choi
Comment 3 2010-08-31 20:19:34 PDT
Leandro Pereira
Comment 4 2010-09-01 12:22:34 PDT
Looks good to me, but I wonder if would be a nicer idea to share this header file with the GTK+ port somehow. Perhaps move it to gobject/ and call it GTypedefs.h? I'm CC'ing some of the GTK+ guys to see if they think this is a good idea.
Ryuan Choi
Comment 5 2010-09-02 00:20:37 PDT
(In reply to comment #4) > Looks good to me, but I wonder if would be a nicer idea to share this header file with the GTK+ port somehow. Perhaps move it to gobject/ and call it GTypedefs.h? I'm CC'ing some of the GTK+ guys to see if they think this is a good idea. I agree, If GTK+ guys agree, we'd better to use seperated GTypedefs.h from GtkTypedefs.h. I'll prepare it.
Martin Robinson
Comment 6 2010-09-02 10:38:08 PDT
I think the right thing to do here is to move GtkTypedefs.h to GTypedefs.h and hide the GTK+-specific stuff behind a PLATFORM(GTK). It seems like serious overkill to have an entire include just for the GTK+ stuff.
Lucas De Marchi
Comment 7 2010-09-03 07:51:34 PDT
WebKit Review Bot
Comment 8 2010-09-03 07:54:02 PDT
Attachment 66493 [details] did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style']" exit_code: 1 JavaScriptCore/wtf/gobject/GTypedefs.h:57: cairo_surface_t is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Total errors found: 1 in 8 files If any of these errors are false positives, please file a bug against check-webkit-style.
Martin Robinson
Comment 9 2010-09-03 08:55:48 PDT
Comment on attachment 66493 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=66493&action=prettypatch > JavaScriptCore/wtf/gobject/GTypedefs.h:57 > +typedef struct _cairo_surface cairo_surface_t; This typedef should really be behind a PLATFORM(CAIRO), I think.
Lucas De Marchi
Comment 10 2010-09-03 09:24:17 PDT
WebKit Review Bot
Comment 11 2010-09-03 09:25:40 PDT
Attachment 66509 [details] did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style']" exit_code: 1 JavaScriptCore/wtf/gobject/GTypedefs.h:57: cairo_surface_t is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Total errors found: 1 in 8 files If any of these errors are false positives, please file a bug against check-webkit-style.
Martin Robinson
Comment 12 2010-09-03 10:01:51 PDT
Comment on attachment 66509 [details] Patch LGTM.
Lucas De Marchi
Comment 13 2010-09-03 10:07:47 PDT
Comment on attachment 66509 [details] Patch Clearing flags on attachment: 66509 Committed r66738: <http://trac.webkit.org/changeset/66738>
Lucas De Marchi
Comment 14 2010-09-03 10:07:56 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.